--- a/Frontend/styles/globals.scss
+++ b/Frontend/styles/globals.scss
@@ -1,8 +1,8 @@
-$main-color: rgba(43, 197, 89, 0.2);
+// $main-color: rgba(43, 197, 89, 0.2);
 
-h1 {
-  color: $main-color;
-}
+// h1 {
+//   color: $main-color;
+// }
 
 html,
 body {
